Fix product list dealign problem

--- a/assets/css/bettina.css
+++ b/assets/css/bettina.css
@@ -594,6 +594,7 @@ footer div > .widget{
 .product-image-frame{
 	position: relative;
 	padding-bottom: 50px;
+    min-height: 710px;
 }
 .product-image-frame:hover .product-price .price .amount, .product-title a{
 	display: inline;
@@ -731,6 +732,9 @@ article.status-fik_checkout{
 		left: -34px;
     	top: 0;
 	}
+    .product-image-frame{
+        min-height: 590px;
+    }
 }
 @media screen and (min-width: 768px) and (max-width: 992px){
  	.widget form input {
